fix: disable scrollbar styling

--- a/packages/core/src/index.scss
+++ b/packages/core/src/index.scss
@@ -9,25 +9,25 @@ bce-root {
   display: flex;
   flex-flow: column;
 
-  ::-webkit-scrollbar {
-    background-color: #fff;
-    width: 16px;
-  }
-
-  ::-webkit-scrollbar-track {
-    background-color: #fff;
-  }
-
-  /* scrollbar itself */
-  ::-webkit-scrollbar-thumb {
-    background-color: #babac0;
-    border-radius: 16px;
-    border: 4px solid #fff;
-  }
-
-  ::-webkit-scrollbar-button {
-    display: none;
-  }
+  // ::-webkit-scrollbar {
+  //   background-color: #fff;
+  //   width: 16px;
+  // }
+  //
+  // ::-webkit-scrollbar-track {
+  //   background-color: #fff;
+  // }
+  //
+  // /* scrollbar itself */
+  // ::-webkit-scrollbar-thumb {
+  //   background-color: #babac0;
+  //   border-radius: 16px;
+  //   border: 4px solid #fff;
+  // }
+  //
+  // ::-webkit-scrollbar-button {
+  //   display: none;
+  // }
 }
 
 bce-root bce-status-bar {
